--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev" : "Nodemon src/index.js"
+    "dev": "Nodemon src/index.js"
   },
   "keywords": [
     "javascript",
@@ -12,5 +12,8 @@
   ],
   "author": "\"Muhammad Noman\"",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "prettier": "^3.3.3"
+  }
 }
