--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^8.5.1",
     "mongoose-aggregate-paginate-v2": "^1.1.2",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "serverless-http": "^3.2.0"
   }
 }
