--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js",
-    "start": "node src/prod.js"
+    "start": "node src/prod.js",
+    "build": "netlify-lambda build netlify.js"
   },
   "keywords": [
     "javascript",
@@ -25,9 +26,12 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "mock-aws-s3": "^4.0.2",
     "mongoose": "^8.5.1",
     "mongoose-aggregate-paginate-v2": "^1.1.2",
     "multer": "^1.4.5-lts.1",
+    "netlify-cli": "^17.33.6",
+    "netlify-lambda": "^2.0.16",
     "nodemon": "^3.1.4",
     "serverless-http": "^3.2.0"
   }
