--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js",
-    "start": "node src/prod.js",
-    "build": "netlify-lambda build netlify.js"
+    "start": "node src/prod.js"
   },
   "keywords": [
     "javascript",
