--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js",
-    "start": "node src/prod.js"
+    "start": "node src/prod.js",
+    "build": "src/index.js"
   },
   "keywords": [
     "javascript",
