--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js",
     "start": "node src/prod.js",
-    "build": "netlify-lambda build netlify.js"
+    "build": "node src/index.js"
   },
   "keywords": [
     "javascript",
